--- a/.drone.yml
+++ b/.drone.yml
@@ -139,6 +139,21 @@ steps:
     build_args:
       - NC_VERSION=29-fpm-alpine
 
+- name: nextcloud 30
+  image: plugins/docker
+  when:
+    branch:
+    - master
+  settings:
+    repo: yavook/kiwi-nextcloud
+    tags: 30
+    username:
+      from_secret: DOCKER_USERNAME
+    password:
+      from_secret: DOCKER_PASSWORD
+    build_args:
+      - NC_VERSION=30-fpm-alpine
+
 - name: parallelism provider
   image: alpine
   depends_on:
@@ -151,3 +166,4 @@ steps:
     - nextcloud 27
     - nextcloud 28
     - nextcloud 29
+    - nextcloud 30
