Update for Nextcloud version 31
- adjusted drone YML
- upgrade s6 overlay 3.1.5.0 -> 3.2.1.0
- nginx.conf.patch merged upstream changes

--- a/.drone.yml
+++ b/.drone.yml
@@ -154,6 +154,21 @@ steps:
     build_args:
       - NC_VERSION=30-fpm-alpine
 
+- name: nextcloud 31
+  image: plugins/docker
+  when:
+    branch:
+    - master
+  settings:
+    repo: yavook/kiwi-nextcloud
+    tags: 31
+    username:
+      from_secret: DOCKER_USERNAME
+    password:
+      from_secret: DOCKER_PASSWORD
+    build_args:
+      - NC_VERSION=31-fpm-alpine
+
 - name: parallelism provider
   image: alpine
   depends_on:
@@ -167,3 +182,4 @@ steps:
     - nextcloud 28
     - nextcloud 29
     - nextcloud 30
+    - nextcloud 31
